# tst

./: .gitignore  Dockerfile  README.md  app.py
infra/k8s/cert-manager/: apps-cert.yml  ca-cert.yml  config_baremetal.sh  config_kind.sh  iti-issuer.yaml  zot-cert.yml
infra/k8s/gateway/: gateway.yml  httproute.yml.j2  setup.sh
infra/k8s/gateway/tst/: app1.yml  app2.yml  app3.yml
infra/k8s/kaniko/: job.yaml  namespace.yaml  secret.yaml  volume-claim.yaml  volume.yaml
infra/k8s/zot/: config.yaml  install.sh
services/pipeline/: Cargo.toml  Dockerfile  README.md
services/pipeline/src/: main.rs  router.rs
services/pipeline/src/pipeline/: build.rs  deploy.rs  mod.rs  watch.rs
