[package]
name = "pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
dashmap = "6.1.0"
futures = "0.3.32"
gateway-api = "0.21.0"
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
kube = { version = "3.1.0", features = ["runtime"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.1", features = ["v4"] }
